# realm_of_algorithms

./: .gitignore  LICENSE  README.md
.github/workflows/: static.yml
python/: docker-compose.yaml
python/backend/: benchmark.py  pyproject.toml  server.py
python/frontend/: main_page.py  pyproject.toml
python/shared_lib/: pyproject.toml
python/shared_lib/src/shared_lib/: model.py
wasm_tester/: Readme.md  app.js  index.html  style.css
