[project]
name = "shared-lib"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_lib"]

[tool.hatch.build.targets.sdist]
packages = ["src/shared_lib"]